api-resources/default/72b41f28-bc10-4ca9-b41c-ddba32aac367/2/default_72b41f28-bc10-4ca9-b41c-ddba32aac367_v2_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstorev2
spec:
  hostnames:
  - petstore.io
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v2/cat
  - matches:
    - method: POST
      path:
        type: Exact
        value: /v2/cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v2/dog
  - matches:
    - method: POST
      path:
        type: Exact
        value: /v2/dog
